# melonDS-android

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  stream.py
app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
app/release/: app-release.apk
app/schemas/me.magnum.melonds.database.MelonDatabase/: 2.json  3.json  4.json  5.json  6.json  7.json  8.json
app/src/debug/res/values/: strings.xml
app/src/gitHub/: AndroidManifest.xml
app/src/gitHub/res/xml/: pref_general_updates.xml  provider_paths.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidFrameRenderedCallback.cpp  AndroidFrameRenderedCallback.h  AndroidMelonEventMessenger.cpp  AndroidMelonEventMessenger.h  AndroidRACallback.cpp  AndroidRACallback.h  EmulatorMessageQueueJNI.cpp  EmulatorMessageQueueJNI.h  JniEnvHandler.cpp  JniEnvHandler.h  MelonDSAndroidCameraHandler.cpp  MelonDSAndroidCameraHandler.h  MelonDSAndroidConfiguration.cpp  MelonDSAndroidConfiguration.h  MelonDSAndroidInterface.cpp  MelonDSAndroidInterface.h  MelonDSAndroidJNI.cpp  MelonDSAndroidRumbleManager.cpp  MelonDSAndroidRumbleManager.h  MelonDSNandJNI.cpp  NativeGlContext.cpp  RAAchievementMapper.cpp  RAAchievementMapper.h  RetroAchievementsMapper.cpp  RetroAchievementsMapper.h  RomIconBuilder.cpp  RomIconBuilder.h  UriFileHandler.cpp  UriFileHandler.h
app/src/main/cpp/performancehint/: DummyPerformanceHintManager.h  JniPerformanceHintManager.cpp  JniPerformanceHintManager.h  NdkPerformanceHintManager.cpp  NdkPerformanceHintManager.h  PerformanceHintManager.h  PerformanceHintManagerFactory.cpp  PerformanceHintManagerFactory.h  ThreadSafePerformanceHintSession.cpp  ThreadSafePerformanceHintSession.h
app/src/main/res/: strings.xml
app/src/main/res/anim/: dialog_slide_in.xml  dialog_slide_out.xml  fragment_translate_enter_pop.xml  fragment_translate_enter_push.xml  fragment_translate_exit_pop.xml  fragment_translate_exit_push.xml  rotate.xml
app/src/main/res/drawable/: background_background_selected.xml  background_bottom_screen.xml  background_rewind_save_state_focused.xml  background_top_screen.xml  background_translucent_toolbar.xml  background_uiview.xml  background_uiview_selected.xml  background_uiview_selector.xml  color_picker_selected.xml  color_picker_selector.xml  color_picker_tile_background.xml  drawable_ripple_small.xml  ic_audio.xml  ic_block.xml  ic_checkbox_checked.xml  ic_gba_cart.xml  ic_input.xml  ic_link.xml  ic_melon_monochrome.xml  ic_menu.xml  ic_sort.xml  ic_status_error.xml  ic_status_ok.xml  ic_status_warn.xml  ic_sync_black_24dp.xml  ic_trophy.xml  ic_video.xml  selector_rewind_save_state.xml  selector_rewind_save_state_time_text.xml  splash.xml
app/src/main/res/layout/: activity_background_preview.xml  activity_backgrounds.xml  activity_cheats.xml  activity_emulator.xml  activity_input_setup.xml  activity_layout_config.xml  activity_layout_editor.xml  activity_layouts.xml  activity_main.xml  activity_render.xml  activity_rom_list.xml  activity_settings.xml  (+40 more)
(+975 files in other folders)
